--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.15",
+    "react-bootstrap-icons": "^1.10.2",
     "validate-polish": "^2.0.40"
   },
   "devDependencies": {
