--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.15",
     "react-bootstrap-icons": "^1.10.2",
+    "react-burger-menu": "^3.0.9",
+    "react-hamburger-menu": "^1.2.1",
+    "react-icons": "^4.8.0",
     "validate-polish": "^2.0.40"
   },
   "devDependencies": {
