--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-burger-menu": "^3.0.9",
     "react-hamburger-menu": "^1.2.1",
     "react-icons": "^4.8.0",
+    "react-notification": "^6.8.5",
     "react-notifications": "^1.7.4",
     "react-transition-group": "^4.4.5",
     "validate-polish": "^2.0.40"
